Eduprov : 27-07-2021 : update meta tags and update theme color and add more testimonial's

--- a/b-pharm-course.html
+++ b/b-pharm-course.html
@@ -2,95 +2,104 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>B Pharmacy Course Admission Eligibility Career & Scope | Eduprov</title>
-  <meta name="description"
-    content=" B Pharmacy deals in pharmaceutical education related to drugs medicine. To Know about admission, eligibility, colleges, entrance career scope visit EDUPROV">
-  <meta name="keywords" content="B-Pharm Admission,B-Pharm Career,B-Pharm Colleges,B-Pharm Eligibility,  B-Pharm full form,  B-Pharm Scope,  Bachelor of Pharmacy Career,Bachelor of Pharmacy Colleges,Bachelor of Pharmacy Scope,what is B-Pharm, bachelor of pharmacy, Bachelor of Pharmacy Admission, Bachelor of Pharmacy Eligibility b pharma,b pharma college,b pharmacy course,b pharmacy admission 2020,b pharma fees,b pharma full form,b pharm course duration,b pharma course,b pharmacy course details,b pharmacy eligibility,b pharmacy admission,b pharm course fees,bsc pharmacy,after b pharmacy which course is best,b pharmacy duration,eligibility for d pharma,d pharma qualification,courses after b pharm,b pharma best college,b pharma duration,pharmacy courses after 12th,after b pharmacy,pharmacy courses after 12th science,full form of b pharma,b pharmacy admission 2021,about b pharmacy,b pharmacy information,b pharma course year,about b pharmacy course,b pharm degree,b pharmacy years,b pharm eligibility criteria,b pharmacy details,b pharm course year,b pharma college fees,admission for b pharmacy 2020,pharmacy after 12th,b pharm course eligibility,b pharm and d pharm,full form of d pharmacy,pharmacy after 12th pcm,b pharma time duration,b pharma form,d pharma certificate,b pharmacy admission 2019,b pharma d pharma,b pharm course fees structure,b pharma diploma,b pharma is a graduation degree,eligibility of d pharma,b pharma top college,b pharm fees structure,b pharmacy eligibility 2020,b pharm course duration and fees,duration of d pharma,b pharmacy 2020,b pharma certificate,b pharma private college fees,b pharmacy certificate,b pharm after d pharm,b pharmacy time period,b pharma form 2020,b pharma private college,b pharmacy colleges in,b pharma after graduation,d pharma b pharma,b pharma university,b pharma 1st semester,b pharm after course,b pharma admission fees,b pharmacy study,b pharm total fees,b pharm degree certificate,b pharmacy course information,b pharmacy after 12th,duration of m pharmacy,b pharma full details,b pharma admission criteria,b pharm direct 2nd year admission,b pharma college admission,d pharma admission criteria,best college for m pharm,b pharm admission eligibility,b pharmacy admission requirements,pharm b course details,eligibility of b pharma,after b pharm which course is better,d pharma after 10th,diploma in pharmacy after 12th,d pharma degree,b pharma course details,about b pharma course,b pharm degree duration,b tech pharmacy,b pharm total years,d pharm and b pharm,course duration of b pharma,admission in b pharma 2020,b pharm after bsc,eligibility for b pharm after 12th,d pharma d pharma,b pharm duration and fees,d pharma best college,pharmacy course details after 12th,b pharm low fees college,d pharm course duration and fees,b pharm qualification eligibility,qualification of b pharma,b pharm diploma course details,admission b pharmacy 2020,b pharm certificate,b pharma admission form,b pharm direct admission colleges,b pharma admission form 2020,medical courses after b pharmacy,diploma in pharmacy after 12th arts,requirements for b pharmacy admission,after 12th pharmacy course,b pharma in ipu,b pharm graduation,b pharmacy course time,b pharmacy after 10th,b pharm d pharm,b pharmacy 1st year,after 10th diploma in pharmacy colleges,admission of b pharmacy 2020,private college for b pharma,bundelkhand university b pharma fees,b pharmacy groups,pharmacy after 12th pcb,courses in b pharmacy,b pharmacy courses after 12th science,d pharma education qualification,polytechnic b pharma,b pharm 2 year course,requirement for b pharma,b pharmacy all in one,b tech pharmaceutical,all about b pharmacy,b pharmacy 2nd year admission 2020,b tech in pharmacy,b pharmacy 1st year inorganic chemistry,criteria for b pharmacy,b pharma direct admission,b pharm after 12,medicinal chemistry b pharmacy,pharmacy course after bsc,b pharma all details,b pharm degree course details,d pharma college in samastipur,minimum qualification for b pharma,qualification required for d pharma,b pharm direct second year admission,qualification required for b pharma,b pharmacy classes,full form d pharma,pharmacy after bsc,b pharm and pharm d,duration of b pharma course,eligibility for b pharm after d pharmacy,b pharma classes,bsc b pharma,after 10th d pharmacy,b pharma diploma courses,bsc pharmacy eligibility,eligibility for d pharmacy after 12th,pharmacy b pharm,b pharm m pharm,pharmacy d pharma,b pharm course qualification,b pharm course time period,after completing b pharmacy which course is best,full form b pharma,class b pharmacy,b pharmacy after,d pharm to b pharm admission,criteria for b pharmacy admission,b pharma form 2021,polytechnic b pharma form 2020,b pharmacy 2nd year,
-                                     ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/b-pharm-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Pharmacy Admission Guidance in Bangalore </title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/b-pharm-course.html"
+      },
+      "headline": "Bachelor of Pharmacy Admission Guidance in Bangalore",
+      "description": "Bachelor of Pharmacy (B Pharm) is a four-year undergraduate program in which students study the methods and process of preparing drugs and how does the dispensing of medicine and drugs take place. Pharmacy",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-27",
+      "dateModified": "2021-07-27"
+    }
+    </script>
+  <meta name="description" content="Bachelor of Pharmacy (B Pharm) is a four-year undergraduate program in which students study the methods and process of preparing drugs and how does the dispensing of medicine and drugs take place. Pharmacy">
+  <meta name="keywords" content=" b pharmacy college,bachelor of pharmacy,b pharmacy admission 2020,b pharmacy subjects,b pharm course duration,b pharmacy course,b pharma course,b pharmacy course details,b pharmacy eligibility,b pharmacy admission,bsc pharmacy,b pharmacy admission process,b pharmacy duration,b pharmacy entrance exam,courses after b pharmacy,best course after b pharmacy,best college for b pharmacy,after b pharmacy,about b pharmacy course,bachelor of pharmacy course,b pharmacy admission process 2020,b pharmacy years,bachelor degree in pharmacy,b pharmacy entrance exam 2020,b pharmacy details,list of courses after b pharmacy,b pharmacy 1st year subjects,b pharmacy course years,admission for b pharmacy 2020,b pharm 1st year subjects,b pharmacy subjects list,b pharmacy admission date 2020,b pharmacy requirements,b pharmacy subjects 1st year,bachelor of pharmacy course duration,eligibility of b pharma,b pharmacy admission 2020 date,b pharm 2nd year subjects,b pharmacy degree,b pharmacy 2020,b pharm course subjects,b pharmacy online classes,b pharmacy eligibility 2020,b pharmacy study,1st year b pharmacy subjects,b pharmacy after 12th,b pharmacy after course,b pharmacy course eligibility,b pharmacy exam,b pharmacy first year subjects,b pharmacy all subjects,b pharmacy admission date,b pharm 4th year subjects,b pharmacy university,d pharmacy and b pharmacy,b pharmacy students,b pharmacy full details,exam for b pharmacy,b pharmacy exam date,b pharmacy open university,entrance exam for b pharmacy after 12th,d pharmacy b pharmacy,b pharmacy admission eligibility,b pharmacy online course,b pharmacy total year,b pharm subjects first year,b pharmacy top colleges,online b pharmacy course,b pharmacy private college,b pharmacy ayurveda,b pharmacy college in,b pharmacy college admission,bachelor of pharmacy admission,bachelor of pharmacy online,bachelor of pharmacy honours,ba pharmacy,bachelor of pharmacy requirements,b pharmacy admission requirements,b pharmacy admission 2019,b pharmacy subjects list 1st year,about b pharma course,b pharmacy subjects list 2nd year,bachelor of pharmacy duration,b pharmacy exam 2020,eligibility for b pharm after 12th,pharmacy honours,b pharmacy entrance exam date 2020,b pharmacy 1st year,entrance exam after b pharmacy,b pharmacy comes under which stream,bachelors in pharmacy degree,b pharmacy last date,requirements for b pharmacy admission,bachelor of pharmacology and toxicology,bachelor of pharmacy subjects,bachelor of pharmacy eligibility,b pharmacy groups,online courses after b pharmacy,courses in b pharmacy,bachelor of pharmacy uc,after completing b pharmacy which course is best,b pharmacy degree duration,b pharmacy 1 year subjects,all about b pharmacy,entrance for b pharma,duration of b pharm after bsc,b pharmacy online,pharmaceutical bachelor's degree,bachelor of pharmacy jcu,b pharmacy classes,b pharmacy 2nd year,pharmacy b pharm,online classes for b pharmacy,first year b pharmacy subjects,b pharmacy 2 year subjects,b pharmacy after,more like bachelor of pharmacy,online bachelor's degree in pharmacology,bachelor of clinical pharmacy,total subjects in b pharmacy,options after b pharmacy,b pharm entrance,b pharmacy total subjects,bachelor of pharmacy latrobe,b pharma about,after b pharmacy entrance exam,b pharmacy in ayurveda,bachelor in pharmacy eligibility,bachelor of pharmacy admission 2020,pharmacy technician bachelor's degree,b pharmacy admission website,b pharmacy list,b pharmacy college admission date,eligibility of b pharmacy,after 12th b pharmacy,bachelor of pharmacy course details,b pharm honours,bachelor of pharmacy entry requirements,best university for b pharmacy,types of b pharmacy,requirements for b pharmacy,b pharmacy apply online,about bachelor of pharmacy,apply for b pharmacy,all about b pharmacy course,bs pharmacy admission 2020,b pharmacy education,pharmacy ba,b pharmacy admission last date,subjects for b pharmacy 1st year,bachelor of pharmacy entrance exam,subjects in b pharmacy first year,b pharmacy college without entrance exam,use of b pharmacy,b pharmacy all details,bachelor in pharmacy requirements,study of b pharmacy,b pharmacy admission qualification,pharm d course after b pharmacy,b pharmacy subjects for 1st year,after completing b pharmacy,bachelor in ayurvedic pharmacy,study after b pharmacy,bachelor in pharmacy course,d pharmacy after b pharmacy,b pharmacy 2 year admission,pharm d course duration after b pharmacy,admission open for b pharmacy,b pharmacy course college,bachelor of pharmacy with honours,jcu bachelor of pharmacy,b pharmacy after bsc,requirements for bachelor of pharmacy,full details of b pharmacy course,open university for b pharmacy,bachelor of pharmacy online degree,b pharmacy admission after d pharmacy,official website for b pharmacy,b pharm pharmacy,b pharmacy types,bachelor of pharmaceutical,official website of b pharmacy,b pharmacy course requirements,bachelor pharmacy course list,pharmacist on the bachelor,bachelor of pharmacy admission in bangalore,
+
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Pharmacy Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/b-pharm-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Bachelor of Pharmacy (B Pharm) is a four-year undergraduate program in which students study the methods and process of preparing drugs and how does the dispensing of medicine and drugs take place. Pharmacy" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Pharmacy Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Bachelor of Pharmacy (B Pharm) is a four-year undergraduate program in which students study the methods and process of preparing drugs and how does the dispensing of medicine and drugs take place. Pharmacy" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-              class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-              class="fa fa-user"></i> Student Form</a>
-        </div>
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding: 50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>B Pharmacy</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-  <!--Course Start-->
-
-
-  <div class="container ">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1>Bachelor of Pharmacy</h1>
       </div>
     </div>
   </div>
-  <!--container Start-->
+
+
+
+
   <div class="container mt-1">
     <div class="row">
       <div class="col-md-12">
