--- a/aurobindo-memorial-school.html
+++ b/aurobindo-memorial-school.html
@@ -87,13 +87,11 @@
     <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
 
-  <div class="banner">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1 class="text-white">Aurobindo Memorial School</h1>
-        </div>
+  <div class="container text-white">
+      
+    <div class="row">
+      <div class="col-md-8 mt-5 pt-3">
+        <h1>Aurobindo Memorial School</h1>
       </div>
     </div>
   </div>
