--- a/b.sc-pathology-course.html
+++ b/b.sc-pathology-course.html
@@ -2,97 +2,104 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BSc Pathology Admission Eligibility Career & Scope | Eduprov</title>
-  <meta name="description" content="BSc pathology is concerned with diagnosis, identification, & study of diseases. Get updates on colleges admission criteria, cut-off, career & scope with EDUPROV
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/b.sc-pathology-course.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Pathology Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/b.sc-pathology-course.html"
+      },
+      "headline": "Bachelor of Pathology Admission Guidance in Bangalore",
+      "description": "Bachelor of Pathology course is an undergraduate program in which you understand disease from a tissue, cellular, molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated from the range",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-27",
+      "dateModified": "2021-07-27"
+    }
+    </script>
+  <meta name="description" content="Bachelor of Pathology course is an undergraduate program in which you understand disease from a tissue, cellular, molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated from the range">
+  <meta name="keywords" content=" bachelor of pathology,bachelor of speech pathology,speech pathology bachelor's degree,bachelor of speech and hearing sciences,bachelor of speech language pathology,bachelor of speech pathology uq,bachelor of speech and language pathology,bachelor of science in speech language pathology,bachelor of speech therapy,communication sciences and disorders bachelor's degree,speech therapy bachelor's degree,bachelor of science in speech and hearing sciences,speech language pathology bachelor's degree,bachelor of speech and language therapy,bachelor of science in communication sciences and disorders,pathology bachelor degree,bachelor of audiology and speech language pathology colleges,bachelor of science speech pathology,forensic pathologist bachelor's degree,bachelors in speech language pathology,bachelor in communication sciences and disorders,bachelor of speech hearing and language sciences,bachelor of communication sciences and disorders,bachelor of science in speech pathology,bachelor in speech language pathology and audiology,bachelor of science in pathology,bachelor's degree for speech language pathology,ba in speech language pathology,bsc pathology admission 2020,bachelor of audiology and speech language pathology,
+
   ">
-  <meta name="keywords" content="B.Sc Pathology, B.Sc Pathology Admission, B.Sc Pathology Course Details, B.Sc Pathology Admission Bangalore , B.Sc Pathology Career,  B.Sc Pathology eligibility, B.Sc Pathology admission criteria, B.Sc Pathology Bangalore colleges, B.Sc Pathology college admission,  B.Sc Pathology Course , what is B.Sc Pathology , Admission for B.Sc Pathology course , B.Sc Pathology Bangalore colleges admission,  B.Sc Pathology colleges , B.Sc Pathology admissions, B.Sc Pathology course admission, B.Sc Pathology scope, B.Sc Pathology jobs,  Pathology Admission, Pathology Course Details, Pathology Admission Bangalore , Pathology Career, Pathology eligibility,  Pathology admission criteria, Pathology college admission, Pathology Bangalore colleges, Pathology Course , Pathology course admission,   Pathology Bangalore colleges, Pathology college admission, Pathology Course , what is  Pathology , Admission for  Pathology course ,   Pathology Bangalore colleges admission, Pathology colleges , Pathology admissions, Pathology course admission, Pathology scope
-    ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Pathology Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/b.sc-pathology-course.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Bachelor of Pathology course is an undergraduate program in which you understand disease from a tissue, cellular, molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated from the range" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Pathology Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Bachelor of Pathology course is an undergraduate program in which you understand disease from a tissue, cellular, molecular, biological, immunological, and functional perspective. In pathology, knowledge will be integrated from the range" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <div class="navbar-nav ml-auto ">
-            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-                class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-user"></i> Student Form</a>
-          </div>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
   <!--Nav Bar End-->
 
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding: 50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Pathology</h1>
-        </div>
-      </div>
+ 
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-1">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1>Bachelor of Pathology</h1>
       </div>
     </div>
   </div>
+ 
+ 
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
