--- a/bachelor-in-mass-communication.html
+++ b/bachelor-in-mass-communication.html
@@ -2,97 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
-  <title>BA Mass Communication Admission Eligibility Scope | Eduprov</title>
-  <meta name="description" content="BA Mass Communication student learn communication through different means like radio, film.Get admission in colleges,counselling scope @ EDUPROV
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bachelor-in-mass-communication.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Mass Communication Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bachelor-in-mass-communication.html"
+      },
+      "headline": "Bachelor of Mass Communication Admission Guidance in Bangalore",
+      "description": "In the contemporary world, there are many courses that are offered at the undergraduate level, but there are only a few courses that offer you a high-paying scale and that can aid you in having a prosperous future.",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-27",
+      "dateModified": "2021-07-27"
+    }
+    </script>
+  <meta name="description" content="In the contemporary world, there are many courses that are offered at the undergraduate level, but there are only a few courses that offer you a high-paying scale and that can aid you in having a prosperous future. ">
+  <meta name="keywords" content=" ba mass communication,bachelor of mass media,bachelor of journalism and mass communication,ba journalism and mass communication,bachelor of mass communication,bjmc subjects,ba mass communication subjects,ba journalism syllabus,bachelor degree in mass communication,ba in mass media,bachelor of arts in mass communication,ba multimedia and mass communication,ba journalism colleges,bachelor of arts in journalism and mass communication,ba journalism and mass communication subjects,ba in multimedia and mass communication,ba mass communication syllabus,ba journalism scope,ba mass communication and journalism subjects,bachelor degree in journalism and mass communication,ba mass media and communication,ba in mass media and communication,bachelor of mass communication colleges,bachelor of mass media subjects,bachelor of mass media colleges,ba mass communication and journalism syllabus,bachelor of arts in mass communication major in broadcasting,bachelor journalism mass communication,bachelor of mass media mumbai university,bachelor's in mass media,ba in journalism and mass communication subjects,bachelor of media communication,jmi ba mass media entrance syllabus,bachelor degree mass communication,about bjmc course,ba journalism & mass communication,journalism after ba,invertis university bjmc,ba mass communication colleges,bachelor of arts major in mass communication,symbiosis ba mass communication,bachelor in mass media and communication,bachelor of journalism and mass communication subjects,bachelor of mass media and communication,mass communication after ba,bachelor of mass communication fees,bachelor of journalism and mass communication colleges,bachelor of journalism and mass communication entrance exam syllabus,jamia millia islamia ba mass communication,bachelor of journalism syllabus,bachelor's degree in mass media,about bjmc,bjmc after 12th,best colleges for bachelor in journalism and mass communication,bachelor of mass communication short form,bachelor of mass communication syllabus,ba mass communication fees,bachelor of arts in mass communication major in journalism,ba in journalism colleges,bachelor of mass communication scope,best colleges for bachelor in mass communication,bachelor in mass media course,bachelor of mass communication subjects,subjects in ba mass communication and journalism,bachelor of mass communication admission,bachelor of mass communication admission in bangalore,
+
   ">
-  <meta name="keywords" content="mass media, course in mass communication, mass communication courses, courses in mass communication, courses of mass communication, mass communication course, what is mass communication, what is mass communications, journalism and mass communication, mass communication and journalism, what is mass media, mass communication meaning, means of mass communication, means of mass, media communication, mass communication media, mass media communication, medium of mass communication, mediums of mass communication, mass communication jobs, job for mass communication, mass communication job, mass communications jobs, example of mass communication, examples of mass communication, mass communication examples, jobs in mass communication, mass communication definition, mass communication meaning in Admission, define mass communication, definition of mass communication, definitions of mass communication, mass communication in Admission, types of mass communication, journalism in Admission, career in mass communication, careers in mass communication, mass communication career, mass communication careers, best college for mass communication, mass communication and journalism jobs, mass media meaning in Admission, journalism and mass communication jobs, mass communication degree, journalism colleges in bangalore, bangalore journalism colleges, journalism college in bangalore, importance of mass communication, mass media in Admission, mass communication colleges in bangalore, मास कम्युनिकेशन कोर्स फीस, journalism courses in bangalore, bjmc course details in Admission, bjmc full form in Admission, best colleges for journalism in bangalore, mass communication in Admission meaning, mass media kya hai, what is journalism in Admission, mass communication pdf, journalism and mass communication colleges in bangalore, mass communication and journalism colleges in bangalore, visual communication colleges in bangalore, mass communication colleges near me, mass communication admissions, mass communication bangalore
-    ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Mass Communication Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bachelor-in-mass-communication.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="In the contemporary world, there are many courses that are offered at the undergraduate level, but there are only a few courses that offer you a high-paying scale and that can aid you in having a prosperous future. " />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Mass Communication Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="In the contemporary world, there are many courses that are offered at the undergraduate level, but there are only a few courses that offer you a high-paying scale and that can aid you in having a prosperous future. " />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <div class="navbar-nav ml-auto ">
-            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-                class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-user"></i> Student Form</a>
-          </div>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding: 50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>Bachelor of Mass Communication</h1>
-        </div>
-      </div>
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1>Bachelor of Mass Communication</h1>
       </div>
     </div>
   </div>
+ 
+
   <div class="container mt-3  mt-1">
     <div class="row">
       <div class="col-md-12">
