--- a/bachelor-of-archaelogy.html
+++ b/bachelor-of-archaelogy.html
@@ -2,96 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>BA in Archaeology Admission Syllabus Scope | Eduprov</title>
-  <meta name="description"
-    content="BA in Archaeology study of ancient or recent human past through material remains, museology, ancient culture. For admission in colleges, career visit EDUPROV">
-  <meta name="keywords" content="who is an archaeologist, what is culture in anthropology, what is cultural anthropology,  what is archeology, what is archaeology, what is archaeologist, what is anthropology, what is an  archaeologist, what is an anthropology, types of archaeology, study of culture, social culture,  social cultural, meaning of ethnology, linguistic anthropology branches, linguistic anthropology,  how to become a linguistic anthropologist, historical linguistics anthropology, example of archaeologist,  ethnology meaning in english, ethnology meaning, ethnology is the study of, ethnology and ethnography,  ethnology, ethnologist meaning, ethnologist, ethnological meaning, ethnological definition, definition of archaeologist, define ethnology, define archeology, define archaeology, define archaeologist, culture in anthropology, cultural anthropology, cultural anthropologist, call system anthropology, archeology definition, archeology, archaeology sources, archaeology meaning, archaeology definition, archaeologists meaning in hindi, archaeologist meaning in hindi, archaeologist example, archaeologist, archaeological meaning, anthropology studies, anthropology meaning in tamil, anthropology meaning in marathi, anthropology meaning, anthropology linguistics, anthropology is the study of, anthropology examples, anthropology example, anthropology, anthropologist definition, anthropologist,  anthropological linguistics definition, anthropological linguistics
-    ">
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="canonical" href="https://eduprov.com/bachelor-of-archaelogy.html" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bachelor of Archaelogy Admission Guidance in Bangalore</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BlogPosting",
+      "mainEntityOfPage": {
+        "@type": "WebPage",
+        "@id": "https://eduprov.com/bachelor-of-archaelogy.html"
+      },
+      "headline": "Bachelor of Archaelogy Admission Guidance in Bangalore",
+      "description": "Do you like the thought of studying historic events and items? If so, a degree in archaeology makes perfect sense. It is the perfect way to get a chance of working with historical artifacts, at historical sites",
+      "image": "https://eduprov.com/images/favicon.png",  
+      "author": {
+        "@type": "Person",
+        "name": "thephotogenicbug"
+      },  
+      "publisher": {
+        "@type": "Organization",
+        "name": "Eduprov",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://eduprov.com/images/favicon.png"
+        }
+      },
+      "datePublished": "2021-07-27",
+      "dateModified": "2021-07-27"
+    }
+    </script>
+  <meta name="description" content="Do you like the thought of studying historic events and items? If so, a degree in archaeology makes perfect sense. It is the perfect way to get a chance of working with historical artifacts, at historical sites">
+  <meta name="keywords" content=" bachelor of archaelogy,bachelor of archaelogy admission,bachelor of archaelogy admission in bangalore
+
+  
+  ">
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Bachelor of Archaelogy Admission Guidance in Bangalore" />
+  <meta property="og:url" content="https://eduprov.com/bachelor-of-archaelogy.html" />
+  <meta property="og:site_name" content="Eduprov Educational Institute" />
+  <meta property="og:description"
+    content="Do you like the thought of studying historic events and items? If so, a degree in archaeology makes perfect sense. It is the perfect way to get a chance of working with historical artifacts, at historical sites" />
+  <meta property="og:image" content="#" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@eduprov" />
+  <meta name="twitter:title" content="Bachelor of Archaelogy Admission Guidance in Bangalore" />
+  <meta name="twitter:description"
+    content="Do you like the thought of studying historic events and items? If so, a degree in archaeology makes perfect sense. It is the perfect way to get a chance of working with historical artifacts, at historical sites" />
+  <meta name="twitter:image" content="#" />
+  <meta name="twitter:url" content="https://twitter.com/eduprov" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo"  />
+  <link rel="apple-touch-icon" href="/images/favicon.png"  alt="Edurpov Logo" title="Eduprov logo" >
   <meta name="author" content="thephotogenicbug">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-  <link rel="apple-touch-icon" href="/images/favicon.png">
   <link rel="stylesheet" href="blog.css" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="accordian.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
 </head>
 
 <body>
-  <div class="bootstrap-nav">
-
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand">
-        <div id="logo">
-          <img src="images/logo-white.png" alt="Edu-logo" />
-        </div>
-      </a>
-      <button type="button " style="background-color: white" class="navbar-toggler ml-5" data-toggle="collapse"
-        data-target="#navbarCollapse">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-
-        <div class="navbar-nav ml-auto ">
-          <div class="navbar-nav ml-auto ">
-            <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
-                class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
-                class="fa fa-user"></i> Student Form</a>
-          </div>
-        </div>
-
-      </div>
-
-    </nav>
-  </div>
-  <!--Nav Bar End-->
-
-  <div class="banner" style=" background-image: url(https://i.ibb.co/vxFjMPV/education2.jpg); width: 100%;
-  height: 350px;
-  padding: 50px;
-  background-position: center center;
-  background-size: cover;">
-
-    <div class="container text-white">
-      <div class="row">
-        <div class="col-md-8 mt-5 pt-5">
-          <h1>BA in Archaeology </h1>
-        </div>
-      </div>
+ 
+  <nav>
+    <div class="hamburger">
+      <div class="line"></div>
+      <div class="line"></div>
+      <div class="line"></div>
     </div>
+    <ul class="nav-links">
+      <li class="text-white" style="font-weight: bold;"><a href="https://eduprov.com/">Home</a></li>
+      <li style="font-weight: bold;"><a href="https://eduprov-application.vercel.app/#/">Application Form</a></li>
+      <li style="font-weight: bold;"><a href="#">Contact us</a></li>
+    </ul>
+  </nav>
+  <div id="logo">
+    <img src="images/logo-white.png" alt="Edu-logo" />
   </div>
-
-  <!--Course Start-->
-  </div>
-  <div class="container mt-1">
+  <div class="container text-white">
+      
     <div class="row">
-      <div class="col-md-12">
-        <h2 class="text-center text-primary" id="tag-font">
-          Course
-        </h2>
-        <div id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({
-              pageLanguage: 'en'
-            }, 'google_translate_element');
-          }
-        </script>
-
-        <script type="text/javascript"
-          src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit">
-        </script>
+      <div class="col-md-8 mt-5 pt-3">
+        <h1>Bachelor of Archaelogy</h1>
       </div>
     </div>
   </div>
+
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
