fix image and logo in mobile ui

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </div>
       </div>
       <div class="row" data-aos="fade-up">
-        <div class="col-md-8">
+        <div class="col-md-12">
           <p class="text-justify text-dark" id="paragraph-font">
             <b>Best Admission Guidance in Bangalore</b> Eduprov is an esteemed name in <b>Career Counseling, Overseas
               Education & Admission Guidance</b> institute located in the heart of Bengaluru. EDUPROV works to promote
@@ -479,9 +479,6 @@
             safeguard accomplishment of goals for today, tomorrow, and always.
           </p>
         </div>
-        <div class="col-md-4">
-          <img src="./images/student-time-management.svg"  alt="Student-icon" height="350px" width="350px"   title="Student Sitting in a Wheel"/>
-        </div>
       </div>
     </div>
   </section>
@@ -496,7 +493,7 @@
         </div>
       </div>
       <div class="row" data-aos="fade-up">
-        <div class="col-md-8">
+        <div class="col-md-6">
           <p class="text-justify text-dark" id="paragraph-font">
             <b>Eduprov Education is an Educational Consultancy</b> offering all primitive and prevalent services like
             <b>Admission Guidance, Career Counseling and Overseas Education</b>. Eduprov`s main vision is to change a
@@ -517,8 +514,8 @@
           </p>
 
         </div>
-        <div class="col-md-4">
-          <img src="./images/book-lovers.svg"  alt="Student-icon" height="320px" width="320px"  title="Kid with a book in his hand"/>
+        <div class="col-md-6">
+          <img src="./images/book-lovers.svg" className="img-fluid"  alt="Student-icon"  title="Kid with a book in his hand"/>
         </div>
       </div>
       <div class="row" data-aos="fade-up">
