--- a/index.html
+++ b/index.html
@@ -535,6 +535,28 @@
     </div>
   </section>
 
+   <div class="container">
+     <div class="row">
+      <form action="pro.php" method="POST">
+        <div class="form-group">
+            <label>Name:</label>
+            <input type="text" name="name" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label>Email:</label>
+            <input type="email" name="email" class="form-control" required>
+        </div>
+        <div class="form-group">
+            <label>Message:</label>
+            <textarea class="form-control" name="message" required></textarea>
+        </div>
+        <div class="form-group mt-4">
+            <button class="btn btn-success" type="submit">Submit</button>
+        </div>
+    </form>
+     </div>
+   </div>
+
 
   <!-- <a  href="https://api.whatsapp.com/send?phone=add-ur-number-here-without-plus-symbol-and-space" class="float" target="_blank" >
     <i class="fab fa-whatsapp my-float" ></i>
